--- a/style.css
+++ b/style.css
@@ -1,6 +1,47 @@
-*{
+body{
+    background-color: rgba(19,19,19,255);
+    font-family: Barlow;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    color: white;
 }
-
+.torque{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.torque-text{
+    font-weight: bold;
+    color: white;
+    font-style: italic;
+    font-size: 45px;
+    margin-left: 30px;
+}
+.content{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.heading{
+    font-weight: bold;
+    font-size:42px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+.inner-text{
+    font-size: 25px;
+    font-weight: normal;
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+.text-container{
+    width: 650px;
+    padding-left: 15px;
+}
+.container{
+    display: flex;
+}
+.img-cont{
+    width: 500px;
+}
