--- a/style.css
+++ b/style.css
@@ -1,47 +1,70 @@
-body{
-    background-color: rgba(19,19,19,255);
+body {
+    background-color: rgba(19, 19, 19, 255);
     font-family: Barlow;
     margin: 0;
     padding: 0;
     color: white;
 }
-.torque{
+
+.torque {
     display: flex;
     align-items: center;
     justify-content: center;
 }
-.torque-text{
+
+.torque-text {
     font-weight: bold;
     color: white;
     font-style: italic;
     font-size: 45px;
     margin-left: 30px;
 }
-.content{
+
+.content {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
 }
-.heading{
+
+.heading {
     font-weight: bold;
-    font-size:42px;
+    font-size: 42px;
     margin-top: 15px;
     margin-bottom: 15px;
 }
-.inner-text{
+
+.inner-text {
     font-size: 25px;
     font-weight: normal;
     margin-top: 15px;
     margin-bottom: 15px;
 }
-.text-container{
+
+.text-container {
     width: 650px;
     padding-left: 15px;
 }
-.container{
+
+.container {
     display: flex;
 }
-.img-cont{
+
+.img-cont {
     width: 500px;
+}
+
+.footer {
+    background-color: #1F1F1F;
+    display: flex;
+}
+
+.footupdate li {
+    padding-top: 10px;
+}
+
+.footer-innertext {
+    display: flex;
+    flex-direction: column;
+    width: 33%;
 }
