--- a/style.css
+++ b/style.css
@@ -73,12 +73,38 @@ a{
     color: white;
     text-decoration: none;
 }
-.menu{
-    list-style-type: none;
-    padding: 10px 10px;
-    display: flex;
-}
 
-.item {
-    padding: 10px;
+
+nav {
+    width: 100%;
+    padding-left: 10px;
+    padding-right: 10px;
   }
+  
+  .logo {
+    display: inline-block;
+  }
+  
+  .nav-links {
+    list-style: none;
+  }
+  
+  .nav-item a {
+    display: inline-block;
+    padding: 10px 15px;
+    text-decoration: none;
+    color: white;
+  }
+
+  .logo img {
+    width: 40px;
+    padding: 10px;
+    vertical-align: middle;
+  }
+
+  .search-button img {
+    width: 40px;
+    padding: 10px;
+    vertical-align: middle;
+  }
+  
