--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ a{
 
 
 nav {
-    width: 100%;
+    width: 95%;
     padding-left: 10px;
     padding-right: 10px;
   }
@@ -87,6 +87,7 @@ nav {
   
   .nav-links {
     list-style: none;
+    display: flex;
   }
   
   .nav-item a {
@@ -94,6 +95,7 @@ nav {
     padding: 10px 15px;
     text-decoration: none;
     color: white;
+    font-size: 25px;
   }
 
   .logo img {
@@ -103,8 +105,46 @@ nav {
   }
 
   .search-button img {
-    width: 40px;
+    width: 20px;
     padding: 10px;
     vertical-align: middle;
+    filter: invert(1);
+  }
+
+  .navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .nav-item-button a {
+    margin-top: 7px;
+    margin-right: 5px;
+    display: inline-block;
+    padding: 1px;
+    text-decoration: none;
+    color: white;
+    font-size: 25px;
+    border-radius: 6px;
+    background-color: rgb(89, 89, 249);
+  }
+
+  .nav-item-login a {
+    display: inline-block;
+    padding: 1px;
+    text-decoration: none;
+    color: white;
+    font-size: 25px;
+    margin: 8px;
+    border-radius: 6px;
+    border: 1px solid white;
+    margin-right: 8px;
+  }
+  .search-button a{
+    border-radius: 6px;
+    border: 1px solid white;
+    padding-top: 7px;
+    padding-bottom: 7px;
+    margin-left: 8px;
   }
   
